[project]
name = "blog-cache-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]
